# lutra-math

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: BVector.h  CMakeLists.txt  benchmarks.cpp
include/lutra-math/: Angle.h  Camera2D.h  Color.h  Matrix.h  Quaternion.h  Random.h  Rectangle.h  Types.h  Utilities.h  Vector.h
include/lutra-math/internal/: VectorInternal.h
tests/: CMakeLists.txt  TAngle.h  TMatrix.h  TQuaternion.h  TVector.h  tests.cpp
